# rust-backend-test

./: .env.example  .gitignore  Cargo.toml  README.md  docker-compose.db.yaml  docker-compose.dev.yaml  requirements.txt
migrations/: alembic.ini  env.py  insert_values.py  models.py
migrations/versions/: 62ad7a37fb9f_prod_backend.py
src/: Dockerfile  api.rs  main.rs  models.rs  schemas.rs  storage.rs  utils.rs
src/api/: health.rs  users.rs
src/api/handlers/: health.rs  users.rs
src/core/: config.rs  database.rs  error.rs  mod.rs  result.rs
src/models/request/: user.rs
src/models/response/: error.rs  user.rs
src/utils/: response.rs
tests/: test_api.py
