[package]
name = "ntex-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ntex = { version = "2.0", features = ["tokio"] }
serde = "1.0.99"
serde_json = "1.0"
serde_as = "0.0.1"
rand = "0.8.5"
chrono = "0.4.38"