[package]
name = "rust-backend"
version = "0.2.0"
edition = "2021"


[dependencies]
tokio = { version = "1.43.0", features = [ "full" ] }
serde = { version = "1.0.217", features = [ "derive" ] }
serde_json = "1.0"
chrono = { version = "0.4.39", features = [ "serde" ] }
ntex = { version = "2.10.0", features = [ "tokio" ] }
sqlx = { version = "0.8", features = [ "runtime-tokio", "postgres", "uuid", "chrono", "derive" ] }
uuid = { version = "1.11.1", features = [ "v4", "fast-rng", "serde" ]}
regex = "1.11.1"
once_cell = "1.20.2"
thiserror = "2.0.11"
dotenv = "0.15.0"
# do not update `derive_more` to 1.0.0
derive_more = { version = "0.99.18", features = [ "display", "error" ] }
log = "0.4.24"
env_logger = "0.11.6"


[profile.dev]
opt-level = 0
lto = "off"
panic = "unwind"
debug = true


[profile.release]
opt-level = 3
lto = "fat"
panic = "abort"
codegen-units = 1
debug = false
strip = true
